<resources>
    <string name="app_name">MovieList</string>
    <string name="director">Director</string>
    <string name="movie_title">Movie Title</string>
    <string name="name1">Name</string>
    <string name="genre">Genre</string>
    <string name="name2">Name</string>
    <string name="year">Year</string>
    <string name="name3">Name</string>
    <string name="name4">Name</string>
    <string name="enter_movie">Enter Movie</string>
    <string name="add_movie">Add Movie</string>
    <string name="textview">TextView</string>
</resources>
